--- a/backend/package.json
+++ b/backend/package.json
@@ -20,17 +20,10 @@
     "express": "^4.17.1",
     "google-auth-library": "^6.1.6",
     "jsonwebtoken": "^8.5.1",
-    "mongodb": "^3.6.4",
-    "mysql": "^2.18.1",
     "node-fetch": "^2.6.1",
-    "serverless-http": "^2.6.0",
     "uuid": "^7.0.3"
   },
   "devDependencies": {
-    "db-migrate": "^0.11.12",
-    "db-migrate-mysql": "^2.1.2",
-    "nodemon": "^2.0.7",
-    "serverless": "^2.16.1",
-    "serverless-apigw-binary": "^0.4.4"
+    "nodemon": "^2.0.7"
   }
 }
