--- a/camera_app/windows/runner/Runner.rc
+++ b/camera_app/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "slowtok_camera" "\0"
+            VALUE "FileDescription", "SlowTok" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "slowtok_camera" "\0"
+            VALUE "InternalName", "SlowTok" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
             VALUE "OriginalFilename", "slowtok_camera.exe" "\0"
-            VALUE "ProductName", "slowtok_camera" "\0"
+            VALUE "ProductName", "SlowTok" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
