--- a/camera_app/macos/Runner/Configs/AppInfo.xcconfig
+++ b/camera_app/macos/Runner/Configs/AppInfo.xcconfig
@@ -5,10 +5,10 @@
 // 'flutter create' template.
 
 // The application's name. By default this is also the title of the Flutter window.
-PRODUCT_NAME = slowtok_camera
+PRODUCT_NAME = SlowTok;
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.slowtokCamera
+PRODUCT_BUNDLE_IDENTIFIER = com.slowtok.streamer;
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2023 com.example. All rights reserved.
