--- a/camera_app/android/app/build.gradle
+++ b/camera_app/android/app/build.gradle
@@ -53,10 +53,25 @@ android {
         versionName flutterVersionName
     }
 
+    signingConfigs {
+        debug {
+            storeFile file('./androiddebug.jks')
+            storePassword 'android'
+            keyAlias 'androiddebugkey'
+            keyPassword 'android'
+        }
+    }
+
     buildTypes {
         release {
             // TODO: Add your own signing config for the release build.
             // Signing with the debug keys for now, so `flutter run --release` works.
+            signingConfig signingConfigs.debug
+        }
+    }
+
+    buildTypes {
+        debug {
             signingConfig signingConfigs.debug
         }
     }
