test remotion as player and rendering stream as video

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,18 +9,23 @@
     "deploy": "npm run build && aws s3 sync out/ s3://hydroponics-rost-home/ --acl public-read"
   },
   "dependencies": {
-    "dayjs": "^1.9.7",
-    "next": "10.0.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "@remotion/bundler": "^3.3.61",
+    "@remotion/player": "^3.3.61",
+    "@remotion/preload": "^3.3.62",
+    "@remotion/renderer": "^3.3.61",
+    "dayjs": "^1.11.7",
+    "next": "13.2.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-google-login": "^5.2.2",
-    "react-icons": "^4.2.0",
-    "react-transition-group": "^4.4.1",
+    "react-icons": "^4.8.0",
+    "react-transition-group": "^4.4.5",
     "react-use-googlelogin": "^0.12.5",
+    "remotion": "^3.3.61",
     "use-hash": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^7.17.0",
-    "eslint-plugin-react": "^7.22.0"
+    "eslint": "^8.35.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
